# medical-audit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.streamlit/: config.toml
config/: hospitals.py  mappings.py  settings.py
core/: billing.py  downloader.py  drive.py  helpers.py  inspector.py  logging_setup.py  ops.py  organizer.py  processor.py  reader.py  scanner.py  standardizer.py  validator.py
db/: constants.py  repository.py  rules_repository.py  schema.py
ui/: theme.py  widgets.py
ui/pages/: _settings_rules_view.py  audit.py  documents.py  pipeline.py  pipeline_runner.py  pipeline_stages.py  settings_view.py
