[project]
name = "medical-audit"
version = "1.0.0"
description = "Healthcare document audit system for Colombian hospitals"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client==2.190.0",
    "google-auth-oauthlib==1.2.4",
    "ocrmypdf>=17.3.0",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "playwright>=1.58.0",
    "PyMuPDF==1.24.9",
    "python-dotenv==1.2.1",
    "streamlit>=1.40.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pytest>=8",
    "pytest-cov>=5",
    "pre-commit>=3",
    "pandas-stubs",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]

[tool.ruff.per-file-ignores]
"ui/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.bandit]
skips = ["B101"]
